policies/require-resources.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: skybytech-require-resources
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: validate-resources
      match:
        any:
        - resources:
            kinds:
              - Pod
      exclude:
        resources:
          namespaces:
            - monitoring
      validate:
        message: "CPU and memory requests/limits are required."
        pattern:
          spec:
            containers:
            - resources:
                requests:
                  cpu: "?*"
                  memory: "?*"
                limits:
                  cpu: "?*"
                  memory: "?*"
